--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-	window.location.replace("https://erajamanickam.github.io/portfolio/");
+	window.location.replace("https://rajamanickam.vercel.app/");
 </script>
